@@ -8,7 +8,7 @@ description = "Atomicfu Compiler Plugin"
 
 plugins {
     kotlin("jvm")
-    id("jps-compatible")
+    //    id("jps-compatible")
     id("d8-configuration")
 }
 
@@ -106,6 +106,7 @@ dependencies {
     testImplementation(project(":kotlin-compiler-runner-unshaded"))
 
     testImplementation(commonDependency("commons-lang:commons-lang"))
+//    testImplementation(commonDependency("org.apache.commons:commons-lang3"))
     testImplementation(projectTests(":compiler:tests-common"))
     testImplementation(projectTests(":compiler:tests-common-new"))
     testImplementation(projectTests(":compiler:test-infrastructure"))
@@ -176,45 +177,74 @@ sourceSets {
 
 testsJar()
 
-projectTest(jUnitMode = JUnitMode.JUnit5) {
-    useJUnitPlatform {
-        // Exclude all tests with the "atomicfu-native" tag. They should be launched by another test task.
-        excludeTags("atomicfu-native")
-    }
-    useJsIrBoxTests(version = version, buildDir = layout.buildDirectory)
-
-    workingDir = rootDir
-
-    dependsOn(":dist")
-    dependsOn(atomicfuJsIrRuntimeForTests)
-
-    val localAtomicfuJsIrRuntimeForTests: FileCollection = atomicfuJsIrRuntimeForTests
-    val localAtomicfuJsClasspath: FileCollection = atomicfuJsClasspath
-    val localAtomicfuJvmClasspath: FileCollection = atomicfuJvmClasspath
-
-    doFirst {
-        systemProperty("atomicfuJsIrRuntimeForTests.classpath", localAtomicfuJsIrRuntimeForTests.asPath)
-        systemProperty("atomicfuJs.classpath", localAtomicfuJsClasspath.asPath)
-        systemProperty("atomicfuJvm.classpath", localAtomicfuJvmClasspath.asPath)
-    }
-}
+//projectTests {
+//    testTask(jUnitMode = JUnitMode.JUnit5) {
+//        useJUnitPlatform {
+//            // Exclude all tests with the "atomicfu-native" tag. They should be launched by another test task.
+//            excludeTags("atomicfu-native")
+//        }
+//        useJsIrBoxTests(version = version, buildDir = layout.buildDirectory)
+//
+//        workingDir = rootDir
+//
+//        dependsOn(":dist")
+//        dependsOn(atomicfuJsIrRuntimeForTests)
+//
+//        val localAtomicfuJsIrRuntimeForTests: FileCollection = atomicfuJsIrRuntimeForTests
+//        val localAtomicfuJsClasspath: FileCollection = atomicfuJsClasspath
+//        val localAtomicfuJvmClasspath: FileCollection = atomicfuJvmClasspath
+//        val localAtomicfuCompilerPluginClasspath: FileCollection = atomicfuCompilerPluginForTests
+//
+//        doFirst {
+//            systemProperty("atomicfuJsIrRuntimeForTests.classpath", localAtomicfuJsIrRuntimeForTests.asPath)
+//            systemProperty("atomicfuJs.classpath", localAtomicfuJsClasspath.asPath)
+//            systemProperty("atomicfuJvm.classpath", localAtomicfuJvmClasspath.asPath)
+//            systemProperty("atomicfu.compiler.plugin", localAtomicfuCompilerPluginClasspath.asPath)
+//        }
+//    }
+//
+//    nativeTestTask(
+//        taskName = "nativeTest",
+//        tag = "atomicfu-native",
+//        requirePlatformLibs = true,
+//        customCompilerDependencies = listOf(atomicfuJvmClasspath),
+//        customTestDependencies = listOf(atomicfuNativeKlib),
+//        compilerPluginDependencies = listOf(atomicfuCompilerPluginForTests)
+//    ) {
+//        val localAtomicfuNativeKlib: FileCollection = atomicfuNativeKlib
+//        doFirst {
+//            systemProperty("atomicfuNative.classpath", localAtomicfuNativeKlib.asPath)
+//        }
+//
+//        // To workaround KTI-2421, we make these tests run on JDK 11 instead of the project-default JDK 8.
+//        // Kotlin test infra uses reflection to access JDK internals.
+//        // With JDK 11, some JVM args are required to silence the warnings caused by that:
+//        jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
+//    }
+//
+//    testGenerator("org.jetbrains.kotlin.generators.tests.GenerateAtomicfuTestsKt", doNotSetFixturesSourceSetDependency = true) {
+//        javaLauncher.set(project.getToolchainLauncherFor(JdkMajorVersion.JDK_11_0))
+//    }
+//
+//    withJvmStdlibAndReflect()
+//}
 
 publish()
 standardPublicJars()
 
-val nativeTest = nativeTest(
-    taskName = "nativeTest",
-    tag = "atomicfu-native", // Include all tests with the "atomicfu-native" tag.
-    requirePlatformLibs = true,
-    customCompilerDependencies = listOf(atomicfuJvmClasspath),
-    customTestDependencies = listOf(atomicfuNativeKlib),
-    compilerPluginDependencies = listOf(atomicfuCompilerPluginForTests)
-)
+//val nativeTest = nativeTest(
+//    taskName = "nativeTest",
+//    tag = "atomicfu-native", // Include all tests with the "atomicfu-native" tag.
+//    requirePlatformLibs = true,
+//    customCompilerDependencies = listOf(atomicfuJvmClasspath),
+//    customTestDependencies = listOf(atomicfuNativeKlib),
+//    compilerPluginDependencies = listOf(atomicfuCompilerPluginForTests)
+//)
 
-tasks.named("check") {
-    // Depend on the test task that launches Native tests so that it will also run together with tests
-    // for all other targets if K/N is enabled
-    if (kotlinBuildProperties.isKotlinNativeEnabled) {
-        dependsOn(nativeTest)
-    }
-}
+//tasks.named("check") {
+//    // Depend on the test task that launches Native tests so that it will also run together with tests
+//    // for all other targets if K/N is enabled
+//    if (kotlinBuildProperties.isKotlinNativeEnabled) {
+//        dependsOn(nativeTest)
+//    }
+//}
